--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
           <div class="col-md-12 text-center">
 
           	<ul class="ftco-footer-social">
-                <li class=""><a href="www.linkedin.com/in/sushama-dinde" target="_blank"><span class="icon-linkedin"></span></a></li>
+                <li class=""><a href="https://www.linkedin.com/in/sushama-dinde" target="_blank"><span class="icon-linkedin"></span></a></li>
                 <li class=""><a href="https://www.facebook.com/sushama.dinde" target="_blank"><span class="icon-facebook"></span></a></li>
                 
               </ul>
