--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Frontend Developer","Web Designer".]'></span>
+								     data-rotate='[ "Frontend Developer","Web Designer"]'></span>
 								</h2>
 							</div>
             </div>
