--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Skilled and motivated front-end developer with 4.6 years of experience. Created websites in Angular, Advance HTML, CSS, Bootstrap 3 & 4, Wordpress, JavaScript, JQuery, JSON, collaboration tools (JIRA). Working experience with Agile methodologies like SCRUM Scaled Agile Framework. Received positive feedback from management for punctuality, presentability, and flexibility. Seeking a front-end developer position with a company which will require me to utilize my skills, abilities and experience in the IT field to ensure the company’s success. Certified in <b>AZ-900</b> azure fundamentals for Microsoft Azure.</p>
+		            <p>Skilled and motivated front-end developer with 4.6 years of experience. Created websites in Advance HTML, CSS, Bootstrap 3 & 4, Wordpress, JavaScript, JQuery, JSON, collaboration tools (JIRA). Working experience with Agile methodologies like SCRUM Scaled Agile Framework. Received positive feedback from management for punctuality, presentability, and flexibility. Seeking a front-end developer position with a company which will require me to utilize my skills, abilities and experience in the IT field to ensure the company’s success. Certified in <b>AZ-900</b> azure fundamentals for Microsoft Azure.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Sushama Dinde</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>December 1, 1987</span></li>
@@ -176,7 +176,7 @@
 		    					<span class="position">Web Designer</span>
 		    					<p></p>
 		    					<p>Understanding requirement from client.</p>
-		    					<p>Built feature templates in HTML5, CSS3, Bootstrap 3 & 4, Wordpress, Jquery, Javascript, Angular.</p>
+		    					<p>Built feature templates in HTML5, CSS3, Bootstrap 3 & 4, Wordpress, Jquery, Javascript.</p>
 		    					<p>Implementation of SharePoint branding including creating custom master pages & page layouts.</p>
 		    					<p>Design and delivered client requirement in different phase.</p>
 		    				</div>
@@ -257,19 +257,7 @@
 										  	</div>
 										</div>
 									</div>
-								</div>
-								<div class="col-md-6 animate-box">
-									<div class="progress-wrap ftco-animate">
-										<h3>Angular</h3>
-										<div class="progress">
-										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="95"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
-										    <span>60%</span>
-										  	</div>
-										</div>
-									</div>
-								</div>
-								
+								</div>								
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
 										<h3>Azure DevOps</h3>
