--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Sushama Dinde</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>December 1, 1987</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>118 Spurgeonlaan, Amstelveen</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1185 BD</span></li>
+		            	<li class="d-flex"><span>Address:</span> <span>152 Beneluxlaan, Utrecht</span></li>
+		            	<li class="d-flex"><span>Zip code:</span> <span>3527 HX</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>sushmadinde@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+(31) 616835056 </span></li>
 		            </ul>
