--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Frontend Developer","Web Designer"]'></span>
+								     data-rotate='[ "Azure Cloud Engineer","Azure DevOps Engineer Designer","Web Designer"]'></span>
 								</h2>
 							</div>
             </div>
@@ -284,6 +284,7 @@
 		    					<!-- <span class="date">Feb 2013 - June 2014</span> -->
 		    					<h2>Microsoft Certifications</h2>
 		    					<span class="position">AZ-900 azure fundamentals for Microsoft Azure</span>
+							<span class="position">AZ-400 azure devops expert for Microsoft Azure</span>
 		    					<p></p>
 		    					<!-- <p>Understanding requirement from client.</p>
 		    					<p>Built feature templates in HTML and CSS</p>
