--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 					    	<div class="text pl-3">
 		    					<!-- <span class="date">Feb 2013 - June 2014</span> -->
 		    					<h2>Microsoft Certifications</h2>
-		    					<span class="position">AZ-900 azure fundamentals for Microsoft Azure</span>
+		    					<span class="position">AZ-900 azure fundamentals for Microsoft Azure</span><br/>
 							<span class="position">AZ-400 azure devops expert for Microsoft Azure</span>
 		    					<p></p>
 		    					<!-- <p>Understanding requirement from client.</p>
