--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>Skilled and motivated front-end developer with 4.6 years of experience. Created websites in Advance HTML, CSS, Bootstrap 3 & 4, Wordpress, JavaScript, JQuery, JSON, collaboration tools (JIRA). Working experience with Agile methodologies like SCRUM Scaled Agile Framework. Received positive feedback from management for punctuality, presentability, and flexibility. Seeking a front-end developer position with a company which will require me to utilize my skills, abilities and experience in the IT field to ensure the company’s success. Certified in <b>AZ-900</b> azure fundamentals for Microsoft Azure.</p>
+		            <p>As a seasoned IT professional proficient in application development and designing,  Agile , software development life cycle and project management, Sushama brings a broad spectrum of expertise to the team. She likes work that challenges his technical capabilities and is particularly creative work. She has 4.6 years of experience in Web designer and from last 1 year she started working on azure devops. She has relevant experience in a B2B model that requires planning and translating business value to stakeholders
+</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Sushama Dinde</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>December 1, 1987</span></li>
