--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>118 SPURGEONLAAN, AMSTELVEEN, 1185 BD</p>
+		            <p>152 BENELUXLAAN, UTRECHT, 3527 HX</p>
 		          </div>
 	          </div>
           </div>
