--- a/index.html
+++ b/index.html
@@ -167,6 +167,21 @@
 
 					  <div id="page-2" class= "page two">
 					  	<h2 class="heading">Experience</h2>
+						  <div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-ideas"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<span class="date">6 Months</span>
+		    					<h2>PostNL</h2>
+		    					<span class="position">Azure Devopes Enginner</span>
+		    					<p></p>
+		    					<p>Understanding requirement from client and creating responsive design of various.</p>
+		    					<p>Did the setup of the Azure service infrastructure through the CICD pipeline through azure cli.</p>
+		    					<p>Responsible for timeline-based delivery.</p>
+		    					<p>Build templates in Azure app service, Azure SQL Server, jQuery, HTML5, CSS3, WordPress, Photoshop, CSS, JavaScript, Jquery, Filezilla</p>
+		    				</div>
+	    				</div>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
