--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">6 Months</span>
+		    					<span class="date">1 Year</span>
 		    					<h2>PostNL</h2>
 		    					<span class="position">Azure Devopes Enginner</span>
 		    					<p></p>
@@ -187,7 +187,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">1 Years 4 Months</span>
+		    					<span class="date">1 Years 5 Months</span>
 		    					<h2>Lionbridge Technology</h2>
 		    					<span class="position">Web Designer</span>
 		    					<p></p>
@@ -202,7 +202,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">3 Years 2 Months</span>
+		    					<span class="date">3 Years 3 Months</span>
 		    					<h2>TechTry Solutions</h2>
 		    					<span class="position">Web Designer</span>
 		    					<p></p>
