--- a/index.html
+++ b/index.html
@@ -218,6 +218,28 @@
 					  	<h2 class="heading">Skills</h2>
 					  	
 					  	<div class="row">
+							<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>Azure App Service</h3>
+										<div class="progress">
+										 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
+										  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
+										    <span>70%</span>
+										  	</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>Azure Storage Account</h3>
+										<div class="progress">
+										 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
+										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+										    <span>50%</span>
+										  	</div>
+										</div>
+									</div>
+								</div>
 					  		<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
 										<h3>HTML5</h3>
