--- a/index.html
+++ b/index.html
@@ -240,6 +240,28 @@
 										</div>
 									</div>
 								</div>
+							<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>Azure Key Vault</h3>
+										<div class="progress">
+										 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
+										  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
+										    <span>70%</span>
+										  	</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>Azure ARM Template</h3>
+										<div class="progress">
+										 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
+										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+										    <span>50%</span>
+										  	</div>
+										</div>
+									</div>
+								</div>
 					  		<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
 										<h3>HTML5</h3>
