--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>As a seasoned IT professional proficient in application development and designing,  Agile , software development life cycle and project management, Sushama brings a broad spectrum of expertise to the team. She likes work that challenges his technical capabilities and is particularly creative work. She has 4.6 years of experience in Web designer and from last 1 year she started working on azure devops. She has relevant experience in a B2B model that requires planning and translating business value to stakeholders
+		            <p>As a seasoned IT professional proficient in application development and designing,  Agile , software development life cycle and project management, Sushama brings a broad spectrum of expertise to the team. She likes work that challenges her technical capabilities and is particularly creative work. She has 4.6 years of experience in Web designer and from last 1 year she started working on azure devops. She has relevant experience in a B2B model that requires planning and translating business value to stakeholders
 </p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Sushama Dinde</span></li>
