--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-55.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="http://euphoriantevents.com/" target="_blank">Euphoriant Events</a></h3>
+	    					<h3><a href="https://jencogalva.com/" target="_blank">Jenco Group Events</a></h3>
 	    					<span>Web Design</span>
 	    				</div>
     				</div>
