--- a/index.html
+++ b/index.html
@@ -342,6 +342,17 @@
 										</div>
 									</div>
 								</div>
+							<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>ReactJs</h3>
+										<div class="progress">
+										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="95"
+										  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+										    <span>60%</span>
+										  	</div>
+										</div>
+									</div>
+								</div>
 								
 								
 					  	</div>
