--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 		    					<span class="position">Web Designer</span>
 		    					<p></p>
 		    					<p>Understanding requirement from client.</p>
-		    					<p>Built feature templates in HTML and Wordpress, Bootstrap 3 & 4, JSON, Jquery, Javascript.</p>
+		    					<p>Built feature templates in HTML and Wordpress, ReactJs, TailwindCSS, JSON, Jquery, API, Javascript.</p>
 		    					<p>Optimized components for maximum performance across a vast array of devices and browsers.</p>
 		    					<p>Design and delivered client requirement in different phase.</p>
 		    				</div>
