--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		    					<p>Understanding requirement from client and creating responsive design of various.</p>
 		    					<p>Did the setup of the Azure service infrastructure through the CICD pipeline through azure cli.</p>
 		    					<p>Responsible for timeline-based delivery.</p>
-		    					<p>Build templates in Azure app service, Azure SQL Server, jQuery, WordPress, HTML5, CSS3, Photoshop, CSS, JavaScript, Jquery, Filezilla</p>
+		    					<p>Build templates in Azure app service, Azure SQL Server, jQuery, WordPress, HTML5, CSS3, Photoshop, ReactJs, TailwindCSS, API, MySQL, Filezilla</p>
 		    				</div>
 	    				</div>
 					    <div class="resume-wrap d-flex ftco-animate">
@@ -207,7 +207,7 @@
 		    					<span class="position">Web Designer</span>
 		    					<p></p>
 		    					<p>Understanding requirement from client.</p>
-		    					<p>Built feature templates in HTML and Wordpress, ReactJs, TailwindCSS, JSON, Jquery, API, Javascript.</p>
+		    					<p>Built feature templates in HTML and Wordpress, Bootstap, MySQL, JSON, Jquery, Javascript.</p>
 		    					<p>Optimized components for maximum performance across a vast array of devices and browsers.</p>
 		    					<p>Design and delivered client requirement in different phase.</p>
 		    				</div>
